force-app/zurich-base/main/default/objects/Account_Score_KPI__c/Account_Score_KPI__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting para guardar la url de la imagen a mostrar en los valores de ACCOUNT_SCORE_KPI</description>
    <label>Account_Score_KPI</label>
</CustomObject>