force-app/zurich-base/main/default/objects/Account_Score_KPI__c/fields/CLTV_NoLife__c.field-meta.xml
<CustomField>
    <fullName>CLTV_NoLife__c</fullName>
    <description>URL del recurso estático para CLTV No Vida</description>
    <label>CLTV (Non-Life)</label>
    <type>Url</type>
</CustomField>