force-app/zurich-base/main/default/objects/Account_Score_KPI__c/fields/CustomerSegment1__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment1__c</fullName>
    <description>Campo para guardar la url del valor 1 de segmento cliente</description>
    <label>Customer Segment 1</label>
    <type>Url</type>
</CustomField>