force-app/zurich-base/main/default/objects/Account_Score_KPI__c/fields/CustomerSegment2__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment2__c</fullName>
    <description>Campo para guardar la url del valor 2 de segmento cliente</description>
    <label>Customer Segment 2</label>
    <type>Url</type>
</CustomField>