force-app/zurich-base/main/default/objects/Account_Score_KPI__c/fields/CustomerSegment3__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment3__c</fullName>
    <description>Campo para guardar la url del valor 3 de segmento cliente</description>
    <label>Customer Segment 3</label>
    <type>Url</type>
</CustomField>