force-app/zurich-base/main/default/objects/Account_Score_KPI__c/fields/Info_Icon__c.field-meta.xml
<CustomField>
    <fullName>Info_Icon__c</fullName>
    <description>URL del recurso estático para el icono de informacion</description>
    <label>Info Icon</label>
    <type>Url</type>
</CustomField>