force-app/zurich-base/main/default/objects/Account_Score_KPI__c/fields/OneRedStar__c.field-meta.xml
<CustomField>
    <fullName>OneRedStar__c</fullName>
    <description>Se guarda la imagen a mostrar cuando cltv tiene el valor &quot;1 estrella roja&quot;</description>
    <label>One Red Star</label>
    <type>Url</type>
</CustomField>